--- a/app/src/main/res/drawable/btn_boss_employee.xml
+++ b/app/src/main/res/drawable/btn_boss_employee.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:useLevel="false">
-    <corners android:radius="2dp"/>
-    <solid android:color="@color/green" />
-    <stroke android:width="2dip" android:color="@color/green" />
+    <solid android:color="@color/theme" />
+    <corners android:radius="5dp"/>
+    <stroke android:color="@color/theme" />
     <size
         android:width="15dp"
         android:height="15dp" />
-
 </shape>
