--- a/app/src/main/res/layout/recycler_salary_items.xml
+++ b/app/src/main/res/layout/recycler_salary_items.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="150dp"
     android:background="?android:attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
@@ -38,7 +38,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/tv_date"
-        app:layout_constraintTop_toTopOf="@id/tv_id"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
     <TextView
         android:id="@+id/tv_work"
@@ -51,6 +51,31 @@
         android:text="上班"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tv_time"
-        app:layout_constraintTop_toTopOf="@id/tv_id"
-        app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
+        app:layout_constraintTop_toTopOf="@id/tv_time"
+        app:layout_constraintBottom_toBottomOf="@id/tv_time"/>
+    <TextView
+        android:id="@+id/tv_time_off"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:text="00:00:00"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/tv_date"
+        app:layout_constraintTop_toBottomOf="@id/tv_time"/>
+    <TextView
+        android:id="@+id/tv_work_off"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/ondutystyle"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:text="下班"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/tv_time_off"
+        app:layout_constraintTop_toBottomOf="@+id/tv_work"
+        app:layout_constraintBottom_toBottomOf="@id/tv_time_off"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
